# opsml-cli

./: .gitignore  Cargo.toml  pyproject.toml
src/: main.rs
src/api/: command_structs.rs  download_file.rs  list_cards.rs  metrics.rs  mod.rs  types.rs  utils.rs
src/api/test_utils/: metadata_non_onnx.json  metadata_onnx.json  mock_response.json
