[package]
name = "opsml-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version ="4.3.21",features = ["derive"] }
futures = "0.3.28"
futures-util = "0.3.28"
lazy_static = "1.4.0"
owo-colors = "3.5.0"
reqwest = {version="0.11.18", features = ["blocking", "json", "stream"]}
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tabled = { version = "*", features = ["color"] } 
tokio = { version = "1.31.0", features = ["rt", "macros"] }

[dev-dependencies]
assert-json-diff = "2.0.2"
mockito = "1.0.2"

