[tool.poetry]
name = "opsml-cli"
version = "0.1.0"
description = ""
authors = ["thorrester <steven.forrester@shipt.com>"]
readme = "README.md"
packages = [{include = "opsml_cli"}]

[tool.poetry.dependencies]
python = "^3.10"
maturin = "^1.2.0"

[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"

[project]
name = "opsml-cli"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]


[tool.maturin]
features = ["pyo3/extension-module"]
