[tool.poetry]
name = "opsml-cli"
version = "0.1.0"
description = ""
authors = ["thorrester <steven.forrester@shipt.com>"]
readme = "README.md"
packages = [{include = "opsml-cli"}]

[tool.poetry.dependencies]
python = "^3.10"
maturin = {extras = ["patchelf"], version = "^1.2.0"}

[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"

[tool.maturin]
bindings = "bin" 
strip = true 

[project]
name = "opsml-cli"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]